footer alignment fix + send feedback page fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -59,7 +59,6 @@ html{
 body {
   margin: 0;
   height: 100%;
-  height: 100%;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   font-size: 13px;
